--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.5.0",
+    "@types/qrcode": "^1.5.0",
+    "qrcode": "^1.5.1",
     "rome": "^10.0.1",
     "solid-js": "^1.6.0",
     "solid-start": "^0.2.0",
