--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.5.0",
     "@types/qrcode": "^1.5.0",
-    "qrcode": "^1.5.1",
-    "rome": "^10.0.1",
     "@upstash/ratelimit": "^0.1.5",
     "@upstash/redis": "^1.16.0",
     "dotenv": "^16.0.3",
+    "qrcode": "^1.5.1",
+    "rome": "^10.0.1",
     "solid-js": "^1.5.7",
     "solid-start": "^0.2.1",
+    "ultrahtml": "^1.0.1",
     "undici": "5.11.0",
     "zod": "^3.19.1"
   },
