import twitter users
- this is based on people I follow on mastadon, so some people could be
  overranked and a lot are missing
- import was done with /techtwitter/import which isn't perfect
  - it produces wrong names sometimes
  - it produces wrong usernames if user is local to your instance
  - avatar urls 🤦
  - should be way way way more automated
- needs UI to show tags/follower count and if users are active or verified

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "jsx": "preserve",
     "types": ["vite/client"],
     "baseUrl": "./",
+    "resolveJsonModule": true,
     "paths": {
       "~/*": ["./src/*"]
     }
