--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rome": "^10.0.1",
     "solid-js": "^1.5.7",
     "solid-start": "^0.2.1",
+    "solid-start-deno": "^0.2.5",
     "ultrahtml": "^1.0.1",
     "undici": "5.11.0",
     "zod": "^3.19.1"
